# layerloupe

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  docker-compose.yml  pyproject.toml
.dockerhub/: overview.md
.github/workflows/: ci.yml  dockerhub-readme.yml  e2e.yml  release.yml
examples/: README.md
examples/admin/: .env.example  README.md  docker-compose.yml
examples/admin-docker-secrets/: README.md  docker-compose.yml
examples/protected/: .env.example  README.md  docker-compose.yml
layerloupe/: __init__.py  audit.py  config.py  config_secrets.py  deps.py  logging.py  main.py  sessions.py
scripts/: hash-password.py  seed.sh
tests/: conftest.py  test_annotations.py  test_api_endpoints.py  test_audit_log.py  test_auth_config.py  test_auth_deps.py  test_auth_env_provider.py  test_auth_identity.py  test_auth_route_matrix.py  test_cache.py  test_compose.py  test_config.py  test_config_secrets.py  test_copy_pull.py  test_delete_manifest.py  test_delete_modal.py  test_dockerfile.py  test_e2e_workflow.py  test_error_pages.py  test_examples.py  test_hash_password_script.py  test_health_ready.py  test_humanize.py  test_image_config.py  test_info_panel.py  test_keyboard.py  test_layer_rows.py  test_logging.py  test_login_ui.py  test_manifest_models.py  test_manifests.py  test_pagination.py  test_probe.py  test_readme.py  test_referrers.py  test_registry_auth.py  test_registry_bearer.py  test_registry_client.py  test_release_workflow.py  test_session_login.py  (+7 more)
(+47 files in other folders)
