[project]
name = "layerloupe"
version = "0.2.1"
description = "Modern OCI-aware web GUI for Docker / OCI Image Registries"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "LayerLoupe contributors" },
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "cryptography>=43",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "bcrypt>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["layerloupe"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # asserts allowed in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
files = ["layerloupe"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
